# HUJI---OS

./: README.md
os_ex1/: CMakeLists.txt  Makefile  README  osm.cpp  stopwatch.cpp
os_ex1/GraphMaking/: graphmaker.py
os_ex1/WhatIDo explanation/: explanation.txt  strace_outfile
os_ex2/: CMakeLists.txt  Makefile  README  main.cpp  thread.cpp  thread.h  uthreads.cpp
os_ex2/shirTest/: main (1).cpp
os_ex2/shirTest/test (1)/: ourTest.out  test3.out
os_ex2/test/: test132.cpp
os_ex3/: Barrier.cpp  Barrier.h  Makefile  MapReduceFramework.cpp  README  main.cpp
os_ex3/DEBUG-sampleclient/: MapReduceClient-DEBUG.h  SampleClient-DEBUG.cpp
os_ex3/Josh Files/: (JOSH)CMakeLists.txt  Runner.txt
os_ex3/SuppliedFiles/atomicdemo/: atomicdemo.cpp
os_ex3/SuppliedFiles/barrierdemo/: barrierdemo.cpp
os_ex3/SuppliedFiles/sampleclient/: SampleClient.cpp
os_ex3/test_clients/: README  bigClient.out_master  compile_all  eurovisionClient.cpp  eurovisionClient.out_master  littleClient.cpp  littleClient.out_master  points_awarded.in  run_all
os_ex4/: CMakeLists.txt  Makefile  README  TODOS & Useful_Commands.txt  parserTest.cpp  whatsappServer.cpp  whatsappio.cpp  whatsappio.h
os_ex4/OldFiles/: OLD_whatsappServer.cpp
os_ex5/: CMakeLists.txt  Makefile  README
